# Tema1APD

./: CMakeLists.txt  README.md  Readme.txt  homework.c  homework.h  homework1.c  homework1.h
in/: pumkins.pnm
